Prevent app usage on mobile (fixes #70)

--- a/src/app/components/menu-bar/menu-bar.component.scss
+++ b/src/app/components/menu-bar/menu-bar.component.scss
@@ -30,10 +30,10 @@ h1 {
     padding: 0.1em 0.4em;
     border-radius: 10rem;
     height: min-content;
-    margin: auto 0;
+    margin: 8px 0;
     margin-left: 8px;
     font-size: 75%;
-    font-family: 'Consolas', 'Courier New'
+    font-family: 'Consolas', 'Courier New';
 }
 
 .separator {
